--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/* @import 'bootstrap/dist/css/bootstrap.min.css';
+@import '@fortawesome/fontawesome-free/css/all.min.css'; */
+/* @import url(./styles/_base.css); */
+/* @import url(./../node_modules/bootswatch/dist/sketchy/bootstrap.min.css); */
+@import '../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css'
